# VisionFlow

./: .gitattributes  .gitignore  README.md
VisionFlow/: CMakeLists.txt  VisionFlow.pro  main.cpp  mainwindow.cpp  visionflowview.cpp  visionflowview.h  visionflowview.ui
VisionFlow/core/: flow_connection.cpp  flow_connection.h  flow_context.cpp  flow_context.h  flow_executor.cpp  flow_executor.h  flow_graph.cpp  flow_graph.h  flow_graph_validator.cpp  flow_graph_validator.h  flow_node.cpp  flow_node.h  flow_node_factory.cpp  flow_node_factory.h  flow_port.cpp  flow_port.h  flow_types.cpp  flow_types.h  module_port_binding.cpp  module_port_binding.h
VisionFlow/flow/: flowtypes.cpp  flowtypes.h
VisionFlow/flow/executor/: flowexecutioncontext.cpp  flowexecutioncontext.h  flowexecutorworker.cpp  flowexecutorworker.h  flowrunner.cpp  flowrunner.h  flowtimeoutcontroller.cpp  flowtimeoutcontroller.h
VisionFlow/flow/exporter/: flowgraphexporter.cpp  flowgraphexporter.h
VisionFlow/flow/graph/: flowconnection.cpp  flowconnection.h  flowgraph.cpp  flowgraph.h  flownode.cpp  flownode.h
VisionFlow/modules/: base_module.cpp  base_module.h  module_definition.cpp  module_definition.h  module_registry.cpp  module_registry.h
VisionFlow/modules/test/: add_one_module.cpp  add_one_module.h  const_int_module.cpp  const_int_module.h  print_module.cpp  print_module.h  register_test_modules.cpp  register_test_modules.h  testdemo.cpp  testdemo.h
VisionFlow/nodes/: centercropnode.cpp  centercropnode.h  flownodeautoregister.cpp  flownodeautoregister.h  imagegraynode.cpp  imagegraynode.h  imageloadnode.cpp  imageloadnode.h  imagemergenode.cpp  imagemergenode.h  imagesavenode.cpp  imagesavenode.h  intoutputnode.cpp  intoutputnode.h  nodelibraryregistry.cpp  nodelibraryregistry.h  templatmatchnode.cpp  templatmatchnode.h
VisionFlow/ui/: floweditorwidget.cpp  floweditorwidget.h  flowexecutioncontext.cpp  flowexecutioncontext.h  flowrunner.cpp  flowrunner.h  flowscene.h  flowview.cpp  flowview.h
VisionFlow/ui/component/: floweditorwidget.cpp  flowscene.cpp  flowview.cpp  nodesearchwidget.cpp  nodesearchwidget.h
VisionFlow/ui/flow_workspace/: connection_graphics_item.cpp  connection_graphics_item.h  flow_scene.cpp  flow_scene.h  flow_view.cpp  flow_view.h  flow_workspace_widget.cpp  flow_workspace_widget.h  node_graphics_item.cpp  node_graphics_item.h
VisionFlow/ui/log_output/: log_output_widget.cpp  log_output_widget.h
VisionFlow/ui/main_editor/: main_editor_widget.cpp  main_editor_widget.h  main_editor_widget.ui
VisionFlow/ui/models/: flow_graph_model.cpp  flow_graph_model.h
VisionFlow/ui/module_library/: module_library_widget.cpp  module_library_widget.h  (+2 more)
VisionFlow/utils/: imageconvert.cpp  imageconvert.h  logmanager.cpp  logmanager.h
(+28 files in other folders)
